--- a/src/app/add-user/add-user.component.html
+++ b/src/app/add-user/add-user.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-top:20px">
 <div class="outer-div">
   <form id="form-group" [formGroup]="addUserForm" (ngSubmit)="onSubmit()" novalidate>
 
@@ -39,7 +39,7 @@
           *ngIf="!editable">ADD</button>
         <button type="button" class="btn btn-info btn-sm" id="add" [disabled]="!addUserForm.valid" *ngIf="editable"
           (click)="onEditSave()">UPDATE</button>
-        <button type="button" class="btn btn-info btn-sm" id="reset" (click)="addUserForm.reset()"
+        <button type="button" style="margin-left:5px;" class="btn btn-secondary btn-sm" id="reset" (click)="addUserForm.reset()"
           *ngIf="!editable">RESET</button>
         <button type="button" class="btn btn-info btn-sm" id="reset" (click)="cancelEdit()" *ngIf="editable">CANCEL</button>
       </div>
@@ -64,7 +64,7 @@
       <button type="button" class="btn btn-outline-info btn-sm" id="sortByFirstName" (click)="sort('firstName')">First Name</button>
       <button type="button" class="btn btn-outline-info btn-sm" id="sortByLastName" (click)="sort('lastName')" style="margin-left:20px;">Last Name</button>
       <button type="button" class="btn btn-outline-info btn-sm" id="sortById" (click)="sort('employeeId')" style="margin-right:20px;margin-left:20px;">ID</button>
-      <button type="button" class="btn btn-outline-info btn-sm" id="clearFilter" (click)="clearFilter()" style="margin-right:20px;">Clear Filter</button>
+      <button type="button" class="btn btn-outline-dark btn-sm" id="clearFilter" (click)="clearFilter()" style="margin-right:20px;">Clear Filter</button>
     </div>
   </div>
 
@@ -82,11 +82,11 @@
       </ul>
     </div>
     <div class="col-md-1 ">
-      <button type="button" class="btn btn-secondary" id="edit-btn" (click)="onEdit(user.userId)"
+      <button type="button" class="btn btn-dark btn-sm" id="edit-btn" (click)="onEdit(user.userId)"
         [disabled]="editable && user.userId == edit_id">Edit</button>
       <br>
       <br>
-      <button type="button" class="btn btn-secondary" id="delete-btn" (click)="onDelete(user)"
+      <button type="button" class="btn btn-danger btn-sm" id="delete-btn" (click)="onDelete(user)"
         [disabled]="editable && user.userId == edit_id">Delete</button>
     </div>
   </div>
